# loggerd

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  config.h  config.h.example  loggerd.pri
example/exampleApp/: CMakeLists.txt  config.h  exampleApp.pro  main.cpp
src/: Loggerd.cpp  Loggerd.h  MessageHandler.cpp  MessageHandler.h  TxtMessageHandler.cpp  TxtMessageHandler.h
